# tableau

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: cities.rs  multiline.rs  simple.rs  spans.rs
som/: README.md
som/examples/: Cities.som  Multiline.som  Simple.som  Spans.som
som/src/: Table.som  TableCell.som  TableRow.som  TableStyle.som
src/: cell.rs  lib.rs  row.rs  style.rs
